# rusty-apocalypse

./: Cargo.toml
assets/sprites/: boid.aseprite  hut.aseprite  person.aseprite
src/: components.rs  main.rs  systems.rs
src/boids/: ai.rs  components.rs  mod.rs  resources.rs  systems.rs
src/components/: control.rs  effects.rs  general.rs  mod.rs  player.rs  quad.rs  quads.rs  things_happening.rs  weapon.rs
src/components/control/: mod.rs
src/events/: collisions.rs  facts.rs  mod.rs
src/resources/: facts_of_the_world.rs  mod.rs  quad_store.rs
src/systems/: camera.rs  collisions.rs  input.rs  mod.rs  movement.rs  player.rs  quads.rs  shooting.rs  startup.rs  things_happening.rs
