[package]
name = "rusty-apocaplypse"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = "0.11.1"
bevy-inspector-egui = "0.19.0"
bevy_ecs_ldtk = "0.8.0"
bevy_prototype_lyon = "0.9.0"
bevy_xpbd_2d = { version = "0.2.0", features = ["2d", "debug-plugin", "default", "simd"]}
big-brain = "0.18.0"
# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
